<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.mshop.domain.entity.payment.PaymentType" />
        <variable
            name="viewModel"
            type="com.example.mshop.ui.activity.main.fragment.order.OrderViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.activity.payment.PaymentActivity">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:onClick="@{(v) -> viewModel.back()}"
            android:padding="15dp"
            android:src="@drawable/ic_back"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerPayment"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@color/primaryColor"
            android:gravity="center_vertical"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="@+id/imgBack" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/contentPayment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:clipToPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/vBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerPayment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvOrderSupplier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardInformationUser"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_order_product" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardInformationUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/title_receive_item"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1" />

                    <TextView
                        android:id="@+id/informationUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@{viewModel.userInfo}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/tvLocation"
                        app:layout_constraintTop_toBottomOf="@id/tvLocation"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="@string/informationUser" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tvPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="Phương thức thanh toán"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rcvOrderSupplier" />

                <LinearLayout
                    android:id="@+id/lnCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{(v) -> viewModel.onSelectPaymentType(PaymentType.CASH)}"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod">


                    <ImageView
                        android:id="@+id/imgTickCash"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@{viewModel.currentPaymentType == PaymentType.CASH ? @drawable/ic_checked : @drawable/ic_un_check}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="Thanh toán tiền mặt"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnVnPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{(v) -> viewModel.onSelectPaymentType(PaymentType.VN_PAY)}"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="8dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/lnCash">

                    <ImageView
                        android:id="@+id/imgTickVnPay"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:src="@{viewModel.currentPaymentType == PaymentType.VN_PAY ? @drawable/ic_checked : @drawable/ic_un_check}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="Thanh toán VnPay"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"

                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imgVnPay"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:contentDescription="@null"
                        android:src="@drawable/logo_vnpay"
                        app:layout_constraintHorizontal_bias="0.1" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainSumPayment2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constrainSumPayment3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textSumProductPayment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_money"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@+id/textSumProductPayment2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50.000đ" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainSumPayment3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toTopOf="@id/constrainSumPayment5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textSumShipperPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_delivery"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTotalShipmentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@+id/textSumShipperPayment"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50.000đ" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainSumPayment5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vBottom">

            <TextView
                android:id="@+id/textFinalSumPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_payment"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txtFinalPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtFinalPrice" />

            <TextView
                android:id="@+id/txtFinalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@+id/textFinalSumPayment"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50.000đ" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/vBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,375:60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnOrderNow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:onClick="@{(v) -> viewModel.onPayment()}"
            android:paddingHorizontal="30dp"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/vBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/vBottom" />

        <TextView
            android:id="@+id/txtTitleSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sum_payment"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnOrderNow"
            app:layout_constraintTop_toTopOf="@+id/vBottom" />

        <TextView
            android:id="@+id/txtPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtTitleSum"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleSum"
            tools:text="72.000đ" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>